--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,17 @@
 # Introduction
  
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+Welcome to the Chess.fish Documentation!
 
-## What is Nextra?
+## What is Chess.fish?
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+A way to play chess on the blockchain.
 
-## Documentation
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+The Chess.fish protocol is a decentralized system designed for creating chess wagers on the blockchain. It operates as a peer-to-peer network, enabling players to wager ERC20 tokens on a secure and transparent platform. The protocol is built using smart contracts that are immutable and cannot be modified, ensuring censorship resistance, enhanced security, and eliminating the need for intermediaries who could potentially limit access to the platform. Additionally, the protocol emphasizes self-custody, ensuring a trustless environment for all participants.
+
+
+By using smart contracts, Chess.fish can act as a trusted 3rd party that autonomously enforces the wager conditions agreed upon by both players.
+
+
+
+
