--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,3 +1,7 @@
 # About
 
-This is the about page! This page is shown on the navbar.
+Chess.fish is a way to play chess on the blockchain for crypto.
+
+Chess.fish is a smart contract based project allows chess enthusiasts to challenge other players to wager any amount of ERC20 tokens. By using smart contracts, Chess.fish can act as a trusted 3rd party that autonomously enforces the wager conditions agreed upon by both players.
+
+Chess.fish was created in May 2023 by partylikeits1983. 
