--- a/pages/concepts/fees.mdx
+++ b/pages/concepts/fees.mdx
@@ -1,1 +1,5 @@
 ## Fees
+
+Currently fees are set to 6% for a 1v1 wager. From the 6% fee, 50% (3% overall) goes to the Chess Fish token holders, and the other 3% goes to development of the Chess.fish platform.
+
+The fee structure for 1v1 matches and tournaments will most likely vary.
