--- a/pages/concepts/wager.mdx
+++ b/pages/concepts/wager.mdx
@@ -1,1 +1,5 @@
 ## Wager Contract
+
+The wager contract handles the main logic of handling the payouts of the players. It keeps track of how many wins and losses are in a wager between two players.
+
+The wager contract also checks if each player has sufficient time to continue playing the game.  
