--- a/pages/contracts/contracts.mdx
+++ b/pages/contracts/contracts.mdx
@@ -1,1 +1,3 @@
 ## Smart Contracts
+
+Currently the contracts are being developed and extensively tested. Their address on the polygon mumbai testnet frequently. When the contracts are deployed to Polygon Mainnet we will publish the addresses of all the contract as well as their source code.  
