--- a/pages/guides/accept.mdx
+++ b/pages/guides/accept.mdx
@@ -1,1 +1,7 @@
 ## Accept a Wager
+
+Once either you have created a wager, your opponent can decide to accept or reject the conditions of the wager.
+
+If your opponent denies your wager conditions, you can cancel your wager, and withdraw your tokens. 
+
+To accept a wager, nagivate to the "matches" page. If your opponent has created a wager, you will see it as a pending wager. To accept, click the "accept wager" button.
