--- a/pages/guides/create.mdx
+++ b/pages/guides/create.mdx
@@ -1,1 +1,10 @@
 ## Create A Chess Wager
+
+To create a wager on Chess.fish, navigate to the "Create a Challenge" page on the chess.fish app.
+
+1) Select the address of your opponent
+2) Select the address of the token you will be wagering
+3) Select the amount of the token you will be wagering
+4) Set the time limit for each game in the chess challenge 
+5) Approve the Chess.fish contract to use the tokens you specified
+6) Submit the transaction to create the wager by clicking "create wager"
