--- a/pages/guides/faucet.mdx
+++ b/pages/guides/faucet.mdx
@@ -1,1 +1,7 @@
 ## Mumbai Faucet
+
+To test the Chess.fish contracts, head to https://mumbaifaucet.com/ to get test Matic tokens. 
+
+You can use https://faucet.polygon.technology/ to mint test ERC20 tokens.
+
+Currently Chess.fish is only on Polygon Mumbai Testnet.
