--- a/pages/guides/write.mdx
+++ b/pages/guides/write.mdx
@@ -1,1 +1,3 @@
 ## Write Moves
+
+The process of playing a move is handled by the "playMove" function in the Chess.fish wager contract. Squares are encoded as uint8 integers and a move is encoded as a uint16 integer, where the first 8 bits are the square from, and the last 8 bits are the square to. 
