--- a/pages/concepts/glossary.mdx
+++ b/pages/concepts/glossary.mdx
@@ -1,1 +1,9 @@
 ## Glossary
+
+ERC20 - An ERC20 token refers to a type of digital token that follows the Ethereum Request for Comment 20 (ERC20) standard, which sets out a common set of rules and protocols for creating and operating tokens on the Ethereum blockchain. ERC20 tokens have become the most widely adopted and recognized token standard for issuing and managing tokens on the Ethereum platform.
+
+Dividend Paying Token - A dividend-paying token, also known as a dividend token, is a type of digital token or cryptocurrency that provides periodic distributions of profits or earnings to its token holders. Unlike most tokens or cryptocurrencies, which primarily serve as a medium of exchange or store of value, dividend-paying tokens offer a unique feature of generating passive income for their holders.
+
+
+Wager - A wager refers to a formal agreement or contract where two or more parties make a prediction or bet on the outcome of an uncertain event, usually involving the risk of losing something of value (such as money or possessions) or gaining something of value based on the agreed-upon terms. Once the event or outcome occurs, the wager is settled based on the predetermined conditions. The party or parties who correctly predicted the outcome will receive the stakes from the losing party or parties. In some cases, wagers may involve a third party, such as a bookmaker, or in the case of Chess.fish, a smart contract, who facilitates the agreement and ensures fair play.
+
