--- a/pages/contracts/security.mdx
+++ b/pages/contracts/security.mdx
@@ -1,1 +1,8 @@
 ## Security
+
+Security is exceptionally important with any smart contract based project. 
+
+
+Being bug bounty hunters themselves on Immunefi, the developers of the Chess.fish protocol know the difficulty of making smart contracts truly secure. 
+
+Before deploying to a live EVM blockchain, there will be an audit of the Chess.fish contracts by independent security auditors. 
