--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -2,6 +2,6 @@
 
 Chess.fish is a way to play chess on the blockchain for crypto.
 
-Chess.fish is a smart contract based project allows chess enthusiasts to challenge other players to wager any amount of ERC20 tokens. By using smart contracts, Chess.fish can act as a trusted 3rd party that autonomously enforces the wager conditions agreed upon by both players.
+Chess.fish was created in May 2023 by partylikeits1983.
 
-Chess.fish was created in May 2023 by partylikeits1983. 
+You can get in touch on telegram at: [t.me/alexanderjohnlee](t.me/alexanderjohnlee)
