--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -2,7 +2,6 @@
  
 Welcome to the Chess.fish Documentation!
 
-
 <img src="https://upload.wikimedia.org/wikipedia/commons/8/89/Stockfish_icon_%282010-2020%29.png" alt="Chess.Fish Docs" width={250} height={250}/>
 
 ## What is Chess.fish?
@@ -10,10 +9,9 @@ Welcome to the Chess.fish Documentation!
 
 The Chess.fish protocol is a decentralized system designed for creating chess wagers on the blockchain. It enables players to wager ERC20 tokens on a secure and transparent platform. 
 
-The protocol is built using smart contracts that are immutable, ensuring censorship resistance, enhanced security, and eliminating the need for intermediaries who could potentially limit access to the platform. Additionally, the protocol emphasizes self-custody, ensuring a trustless environment for all participants.
+The protocol is built using smart contracts that are immutable, ensuring censorship resistance, which also eliminates the need for intermediaries who could potentially limit access to the platform.
 
-
-By using smart contracts, Chess.fish acts as a trusted 3rd party that autonomously enforces the wager conditions agreed upon by both players.
+By using smart contracts, Chess.fish acts as a trusted 3rd party that autonomously enforces the wager conditions agreed upon by players.
 
 
 
