--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -13,6 +13,9 @@ The protocol is built using smart contracts that are immutable, ensuring censors
 
 By using smart contracts, Chess.fish acts as a trusted 3rd party that autonomously enforces the wager conditions agreed upon by players.
 
+______ 
 
 
+Currently, Chess.fish is in alpha (early access) and is currently under developement. 
 
+You can follow along with the progress of developement tickets here: [https://chessfish-dev-tickets.notion.site/](https://chessfish-dev-tickets.notion.site/67713926f04e4dc7b4aaa83c80ea14dd?v=86b7fc0e5d8440aa89e0aad45f345943&pvs=4)
