--- a/pages/guides/faucet.mdx
+++ b/pages/guides/faucet.mdx
@@ -1,7 +1,22 @@
+# Testnet Faucets
+
+Currently Chess.fish is on Mumbai and Celo Testnets. 
+
+
+
+
 ## Mumbai Faucet
 
 To test the Chess.fish contracts, head to https://mumbaifaucet.com/ to get test Matic tokens. 
 
 You can use https://faucet.polygon.technology/ to mint test ERC20 tokens.
 
-Currently Chess.fish is only on Polygon Mumbai Testnet.
+
+Add Mumbai to metamask: [Add Polygon-Mumbai](https://shanejonas.github.io/metamask-link/deep/?method=wallet_addEthereumChain&params[0][chainId]=0x13881&params[0][chainName]=Mumbai&params[0][rpcUrls][0]=https://rpc.ankr.com/polygon_mumbai&params[0][nativeCurrency][name]=Matic&params[0][nativeCurrency][symbol]=MATIC&params[0][nativeCurrency][decimals]=18&params[0][blockExplorerUrls][0]=https://mumbai.polygonscan.com/)
+
+## Celo Testnet
+
+To test the Chess.fish contracts, head to https://faucet.celo.org/alfajores/ to get test CELO tokens. 
+
+
+Add Celo Alfajores to Metamask: [Add Alfajores Network](https://shanejonas.github.io/metamask-link/deep/?method=wallet_addEthereumChain&params%5B0%5D%5BchainId%5D=0x27D8&params%5B0%5D%5BchainName%5D=Chiado&params%5B0%5D%5BrpcUrls%5D%5B0%5D=https://rpc.chiadochain.net&params%5B0%5D%5BnativeCurrency%5D%5Bname%5D=Chiado%20xDAI&params%5B0%5D%5BnativeCurrency%5D%5Bsymbol%5D=XDAI&params%5B0%5D%5BnativeCurrency%5D%5Bdecimals%5D=18&params%5B0%5D%5BblockExplorerUrls%5D%5B0%5D=https://blockscout.com/gnosis/chiado)
