--- a/pages/concepts/verifier.mdx
+++ b/pages/concepts/verifier.mdx
@@ -1,4 +1,4 @@
-# Verifier Contract
+## Verifier Contract
 
 The verifier contract is the main contract behind verifing and validating all possible legal chess moves. The verifier contract also determines the outcome of the game, whether it is a stalemate, or checkmate.
 
