--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,10 +4,10 @@ Welcome to the Chess.fish Documentation!
 
 <img src="https://upload.wikimedia.org/wikipedia/commons/8/89/Stockfish_icon_%282010-2020%29.png" alt="Chess.Fish Docs" width={250} height={250}/>
 
-## What is Chess.fish?
+## Chess.fish
 
 
-The Chess.fish protocol is a decentralized system designed for creating chess wagers on the blockchain. It enables players to wager ERC20 tokens on a secure and transparent platform. 
+The Chess.fish protocol is a decentralized system designed for creating chess wagers on the blockchain. 
 
 The protocol is built using smart contracts that are immutable, ensuring censorship resistance, which also eliminates the need for intermediaries who could potentially limit access to the platform.
 
