--- a/pages/concepts/fees.mdx
+++ b/pages/concepts/fees.mdx
@@ -1,5 +1,5 @@
 ## Fees
 
-Currently fees are set to 6% for a 1v1 wager. From the 6% fee, 50% (3% overall) goes to the Chess Fish token holders, and the other 3% goes to development of the Chess.fish platform.
+Currently fees are set to 5% for a 1v1 wager. From the 5% fee, 100% goes to the ChessFish token holders. The accumulated fees are split proportionally among the ChessFish token holders
 
 The fee structure for 1v1 matches and tournaments will most likely vary.
