--- a/pages/purpose.mdx
+++ b/pages/purpose.mdx
@@ -15,3 +15,10 @@ being able to make money playing chess.
 This is why chess.fish exists. Chess.fish allows players to play chess against each other for money with predetermined rules.
 
 Frank can create a chess challenge on chess.fish by specifying the wager currency, the wager amount, the number of games, and the amount of time per player per game. Whichever player has the majority of wins of the set number of games, wins the total wager amount.
+
+
+______ 
+*From Whitepaper:*
+
+The purpose of ChessFish is to serve as a neutral intermediary between two parties wishing to play chess while betting cryptocurrency on the outcome. ChessFish is an experimental project and has not been audited.
+Users are encouraged to exercise caution and conduct their own research before participating, given the nascent stage and potential risks associated with the protocol. As the ecosystem continues to evolve, the team behind ChessFish remains committed to refining its offerings, prioritizing transparency, and fostering a community that enjoys both the strategy of chess and the dynamics of decentralized finance.
