--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -7,15 +7,15 @@ Welcome to the Chess.fish Documentation!
 ## Chess.fish
 
 
-The Chess.fish protocol is a decentralized system designed for creating chess wagers on the blockchain. 
+ChessFish is a non-custodial chess wager smart contract and chess move verification algorithm implemented for the Ethereum Virtual Machine. 
+ChessFish V1 offers the ability for users to create wagers that bet on the outcome of a chess tournament between two players. 
+Users have the ability to specify different parameters for a wager, i.e. the ERC-20 token to wager, the number of games, and the time limit of the wager. 
+ChessFish aims to act as a decentralized intermediary for players betting on the outcome of a chess tournament.
 
 The protocol is built using smart contracts that are immutable, ensuring censorship resistance, which also eliminates the need for intermediaries who could potentially limit access to the platform.
-
 By using smart contracts, Chess.fish acts as a trusted 3rd party that autonomously enforces the wager conditions agreed upon by players.
 
 ______ 
 
-
 Currently, Chess.fish is in alpha (early access) and is currently under developement. 
 
-You can follow along with the progress of developement tickets here: [https://chessfish-dev-tickets.notion.site/](https://chessfish-dev-tickets.notion.site/67713926f04e4dc7b4aaa83c80ea14dd?v=86b7fc0e5d8440aa89e0aad45f345943&pvs=4)
