--- a/pages/concepts/verifier.mdx
+++ b/pages/concepts/verifier.mdx
@@ -13,7 +13,7 @@ Currently the verifier, by default auto-queens when a pawn reaches the other sid
 The MoveVerifier contract stores the chessboard state as a uint256 value. Go to [polygonscan](https://mumbai.polygonscan.com/address/0x56369f7ab5163e4b75683b8eca9bd048ccae97c1#readContract#F15) and input the uin256 gameState you want to get the state for. Copy the resulting string, and paste it into the input box below.
 
 
-Test input string: Q,.,,.,N,R,r,b,,b,.,.,,Q,,r,q,p,,,B,Q,N,R,,n,b,N,,k,b,,K,R,P,Q,r,N,Q,p,.,.,.,.,.,.,.,K,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.
+Initial state string: R,N,B,K,Q,B,N,R,P,P,P,P,P,P,P,P,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,p,p,p,p,p,p,p,p,r,n,b,k,q,b,n,r
 
 #### Input:
 <ChessBoard />
