--- a/pages/concepts/verifier.mdx
+++ b/pages/concepts/verifier.mdx
@@ -12,6 +12,7 @@ Currently the verifier, by default auto-queens when a pawn reaches the other sid
 ### MoveVerifier board visualizer function
 The MoveVerifier contract stores the chessboard state as a uint256 value. Go to [polygonscan](https://mumbai.polygonscan.com/address/0x56369f7ab5163e4b75683b8eca9bd048ccae97c1#readContract#F15) and input the uin256 gameState you want to get the state for. Copy the resulting string, and paste it into the input box below.
 
+Intial gameState uint256: 0xcbaedabc99999999000000000000000000000000000000001111111143265234
 
 Initial state string: R,N,B,K,Q,B,N,R,P,P,P,P,P,P,P,P,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,p,p,p,p,p,p,p,p,r,n,b,k,q,b,n,r
 
