--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -8,7 +8,7 @@ Welcome to the Chess.fish Documentation!
 
 
 ChessFish is a non-custodial chess wager smart contract and chess move verification algorithm implemented for the Ethereum Virtual Machine. 
-ChessFish V1 offers the ability for users to create wagers that bet on the outcome of a chess tournament between two players. 
+ChessFish V1 offers the ability to play 1v1 chess while betting cryptocurrency on the outcome of the game. ChessFish V1 also allows players to play in tournaments of up to 25 players.
 Users have the ability to specify different parameters for a wager, i.e. the ERC-20 token to wager, the number of games, and the time limit of the wager. 
 ChessFish aims to act as a decentralized intermediary for players betting on the outcome of a chess tournament.
 
