--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,21 +1,21 @@
 # Introduction
  
-Welcome to the Chess.fish Documentation!
+Welcome to the ChessFish Documentation!
 
 <img src="https://upload.wikimedia.org/wikipedia/commons/8/89/Stockfish_icon_%282010-2020%29.png" alt="Chess.Fish Docs" width={250} height={250}/>
 
-## Chess.fish
+## ChessFish
 
+ChessFish is a non-custodial chess wager smart contract and chess move verification algorithm implemented for the Ethereum Virtual Machine.
+ 
+ChessFish V1 offers the ability to play 1v1 chess or in tournaments up to 25 players while betting cryptocurrency on the outcome of the game.
 
-ChessFish is a non-custodial chess wager smart contract and chess move verification algorithm implemented for the Ethereum Virtual Machine. 
-ChessFish V1 offers the ability to play 1v1 chess while betting cryptocurrency on the outcome of the game. ChessFish V1 also allows players to play in tournaments of up to 25 players.
-Users have the ability to specify different parameters for a wager, i.e. the ERC-20 token to wager, the number of games, and the time limit of the wager. 
-ChessFish aims to act as a decentralized intermediary for players betting on the outcome of a chess tournament.
+Users have the ability to specify different parameters for 1v1 wagers and tournaments. Users can set the ERC-20 token to wager, the number of games, and the time limit of the wager. 
 
-The protocol is built using smart contracts that are immutable, ensuring censorship resistance, which also eliminates the need for intermediaries who could potentially limit access to the platform.
-By using smart contracts, Chess.fish acts as a trusted 3rd party that autonomously enforces the wager conditions agreed upon by players.
+The protocol is built using smart contracts which are immutable, ensuring decentralization and censorship resistance.
+
 
 ______ 
 
-Currently, Chess.fish is in alpha (early access) and is currently under developement. 
+Currently, ChessFish is in alpha (early access) and is currently under developement. 
 
