--- a/pages/concepts/tournament.mdx
+++ b/pages/concepts/tournament.mdx
@@ -1,3 +1,3 @@
 ## Tournaments
 
-Currently, a tournament contract is being developed. Planned features: Players who wish to join a tournament will pay an entrance fee. Most likely the tournament will be in a 'round-robin' style where each player in the tournament plays every other player. The tournament prize will be distributed proportionally to the number of wins to the top 50% of players.
+Tournaments can have up to 25 players. More info coming soon, be sure to read the whitepaper.
