--- a/pages/contracts/contracts.mdx
+++ b/pages/contracts/contracts.mdx
@@ -1,3 +1,43 @@
 ## Smart Contracts
 
-Currently the contracts are being developed and extensively tested. Their addresses change frequently. When the contracts are deployed to Polygon Mainnet we will publish the addresses of all the contract as well as their source code to GitHub.  
+Currently the ChessFish contracts are only deployed to Polygon Mumbai and Goerli Testnets.
+
+## Testnet Contract Addresse and Addresses
+## Networks and Addresses
+
+### Polygon Mumbai
+
+| Contract name    | Address                                                    |
+|-------------------|----------------------------------------------------------------|
+| Deployer          | 0xB11B4FF9C2e66e78A0c53b6aE5EAAA87548f2dE7                   |
+| Chess Fish Token  | 0x8F06c56A3F11b022ef9461C0b62F81a5Aa93283f                   |
+| Dividend Splitter | 0xA804A4411aB00F7DF2029a36EC8fDA72F89B3b9A                   |
+| Chess NFT         | 0xE591E05D6caf4c52c94d084e6FD15c85F3B38C2d                   |
+| Move Verification | 0xe3adcBF9BbD6fCC4249d786AF8f11a1bBB8ae526                   |
+| Chess Wager       | 0x84162e735D14810F7307D6E637aBdcD4CC0f1A1e                   |
+| Crowd Sale        | 0xbD3F3011b22dadB764BeF9E95279e0C8b5B58357                   |
+| Tournament        | 0x529481596d39aF79B99c17B3Df5cbb893f70A565                   |
+| Treasury Vesting  | 0xeD01FEEdE03a11f09E205DD2df3e6F96Ac5F88De                   |
+
+
+### Goerli
+
+| Contract name    | Address                                                    |
+|------------------|----------------------------------------------------------------|
+| Chess Fish Token | 0x8F06c56A3F11b022ef9461C0b62F81a5Aa93283f                   |
+| Crowd Sale       | 0xbD3F3011b22dadB764BeF9E95279e0C8b5B58357                   |
+| Treasury Vesting | 0xeD01FEEdE03a11f09E205DD2df3e6F96Ac5F88De                   |
+
+
+### Celo Testnet (deprecated) 
+
+| Contract name    | Address                                                    |
+|-------------------|----------------------------------------------------------------|
+| Deployer          | 0x04E7aD617B38D9FCd9A65C8A1b30255350faC8C6                   |
+| Chess Fish Token  | 0x77cA5B0Dc2b0d933961584b49713C5Cb814735B8                   |
+| Dividend Splitter | 0xbAd4ec2C67953AC84d6BE8a8856664AdFfAf0131                   |
+| Chess NFT         | 0x1474A68579a50bad3AeB26b51894Fa9AcaF50d3B                   |
+| Move Verification | 0x6C432d7f07dFE615584309E12CbCbe1BF9086627                   |
+| Chess Wager       | 0x2F6963772a108eb6984bdF7B648455187eA07Ef5                   |
+| Crowd Sale        | 0x5C02C335f038F57fcD5DdC28de7c1F4f144658F2                   |
+| Tournament        | 0x9aD815bc1d5269D4378bCF2b2101b14D4874cE09                   |
