--- a/pages/contracts/contracts.mdx
+++ b/pages/contracts/contracts.mdx
@@ -5,7 +5,7 @@ Currently the ChessFish contracts are only deployed to Polygon Mumbai and Goerli
 ## Testnet Contract Addresse and Addresses
 ## Networks and Addresses
 
-### Polygon Mumbai
+### Arbitrum Sepolia
 
 | Contract name    | Address                                                    |
 |-------------------|----------------------------------------------------------------|
@@ -20,7 +20,7 @@ Currently the ChessFish contracts are only deployed to Polygon Mumbai and Goerli
 | Treasury Vesting  | 0xeD01FEEdE03a11f09E205DD2df3e6F96Ac5F88De                   |
 
 
-### Goerli
+### Sepolia 
 
 | Contract name    | Address                                                    |
 |------------------|----------------------------------------------------------------|
@@ -29,15 +29,3 @@ Currently the ChessFish contracts are only deployed to Polygon Mumbai and Goerli
 | Treasury Vesting | 0xeD01FEEdE03a11f09E205DD2df3e6F96Ac5F88De                   |
 
 
-### Celo Testnet (deprecated) 
-
-| Contract name    | Address                                                    |
-|-------------------|----------------------------------------------------------------|
-| Deployer          | 0x04E7aD617B38D9FCd9A65C8A1b30255350faC8C6                   |
-| Chess Fish Token  | 0x77cA5B0Dc2b0d933961584b49713C5Cb814735B8                   |
-| Dividend Splitter | 0xbAd4ec2C67953AC84d6BE8a8856664AdFfAf0131                   |
-| Chess NFT         | 0x1474A68579a50bad3AeB26b51894Fa9AcaF50d3B                   |
-| Move Verification | 0x6C432d7f07dFE615584309E12CbCbe1BF9086627                   |
-| Chess Wager       | 0x2F6963772a108eb6984bdF7B648455187eA07Ef5                   |
-| Crowd Sale        | 0x5C02C335f038F57fcD5DdC28de7c1F4f144658F2                   |
-| Tournament        | 0x9aD815bc1d5269D4378bCF2b2101b14D4874cE09                   |
