--- a/pages/purpose.mdx
+++ b/pages/purpose.mdx
@@ -2,17 +2,20 @@
 
 ### *From the ChessFish Whitepaper:*
 
-*“The purpose of ChessFish is to serve as a neutral intermediary between two parties wishing to play chess while betting cryptocurrency on the outcome.”*
+*“The purpose of ChessFish is to serve as a neutral intermediary between two or more parties wishing to play chess while betting cryptocurrency on the outcome.”*
 
-### What is the purpose of another chess platform? I mean there's lichess.com, chess.com, and countless others, right?
+### What is the Purpose of Another Chess Platform? Aren't There Already Sites like Lichess.com and Chess.com?
 
-ChessFish is different. It is a platform where users can play against each other for money. 
+ChessFish stands apart. It's a platform where users can compete in chess for money, but in a completely trustless manner. 
 
-It is only at the highest levels can chess players play for money in tournaments.
+It's only at the highest levels that chess players get the opportunity to play for money in tournaments.
 
-However even then, top chess organizations such as FIDE have problems associated with centralization.
+Top chess organizations, such as FIDE, face issues tied to centralization, including the controversial banning of players based on their nationality. [Citation 1](https://www.rferl.org/a/russia-belarus-chess-ban/31756039.html).
 
-For example, take Frank. Frank is a chess player who has spent a lot of time playing on lichess and chess.com, however, he is unlikely to become a top 50 world champion at chess. This shouldn't prevent him from being able to make money playing chess.
+In the 1990s, Bobby Fischer was indicted by the US Government for violating sanctions merely because he participated in a chess tournament in Montenegro and Belgrade. [Citation 2](https://www.washingtonpost.com/archive/politics/1992/12/16/chess-star-indicted-for-ignoring-sanctions/ac8a6d33-98db-4851-8395-5eb440f13f5b/)
 
-This is why ChessFish exists. ChessFish allows players to play chess against each other for money with predetermined rules.
+Since when did chess transform into a political game? 
 
+No country or chess organization should have the power to bar a player from entering a tournament for political, cultural, or racial reasons.
+
+That's the raison d'être for ChessFish. ChessFish empowers players to enjoy chess in a trustless environment, free from the complications of centralization.
