--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,11 +6,8 @@ Welcome to the ChessFish Documentation!
 
 ## ChessFish
 
-ChessFish is a non-custodial chess wager smart contract and chess move verification algorithm implemented for the Ethereum Virtual Machine.
- 
-ChessFish V1 offers the ability to play 1v1 chess or in tournaments up to 25 players while betting cryptocurrency on the outcome of the game.
+ChessFish is a non-custodial chess wager smart contract and chess move verification algorithm implemented for the Ethereum Virtual Machine. ChessFish V1 offers the ability to play 1v1 chess or in tournaments up to 25 players while betting cryptocurrency on the outcome of the game.
 
-Users have the ability to specify different parameters for 1v1 wagers and tournaments. Users can set the ERC-20 token to wager, the number of games, and the time limit of the wager. 
 
 The protocol is built using smart contracts which are immutable, ensuring decentralization and censorship resistance.
 
