--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,7 +1,7 @@
 # About
 
-Chess.fish is a way to play chess on the blockchain for crypto.
+ChessFish is a way to play chess on the blockchain for crypto.
 
-Chess.fish was created in September 2023 by partylikeits1983.
+ChessFish was created in September 2023 by partylikeits1983.
 
 You can get in touch on telegram at: [t.me/alexanderjohnlee](t.me/alexanderjohnlee)
