--- a/pages/contracts/security.mdx
+++ b/pages/contracts/security.mdx
@@ -4,4 +4,4 @@ Security is exceptionally important with any smart contract based project.
 
 Being bug bounty hunters themselves on Immunefi, the developers of the Chess.fish protocol know the difficulty of making smart contracts truly secure. 
 
-Before deploying to a live EVM blockchain, there will be an audit of the Chess.fish contracts by independent security auditors. 
+View the full [source code for ChessFish on GitHub](https://github.com/Chess-Fish/v1-core).
