--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,18 +1,28 @@
-# Introduction
+# Overview
  
-Welcome to the ChessFish Documentation!
+ChessFish is a web3 chess platform, backed by [Arbitrum Grants](https://arbitrum.foundation/grants).
+______
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/8/89/Stockfish_icon_%282010-2020%29.png" alt="Chess.Fish Docs" width={250} height={250}/>
-
+<p align="center">
+  <img src="docs.webp" alt="Chess.Fish Docs" width="400" height="400"/>
+</p>
 ## ChessFish
 
-ChessFish is a non-custodial chess wager smart contract and chess move verification algorithm implemented for the Ethereum Virtual Machine. ChessFish V1 offers the ability to play 1v1 chess or in tournaments up to 25 players while betting cryptocurrency on the outcome of the game.
+ChessFish is a secure chess platform on the Ethereum network, designed for players to engage in one-on-one games or tournaments with up to 25 participants. 
 
+ChessFish allows players to wager cryptocurrency on the outcomes of their games.
 
-The protocol is built using smart contracts which are immutable, ensuring decentralization and censorship resistance.
+> **On the ChessFish platform, users can:** 
+> * Create 1v1 chess matches
+> * Create tournaments with up to 25 players
 
+The protocol is built with immutable smart contracts, ensuring a decentralized and censorship-resistant chess platform.
+
+______
+
+Currently, ChessFish is in alpha (early access) and is currently under developement. 
 
 ______ 
 
-Currently, ChessFish is in alpha (early access) and is currently under developement. 
+Read the full whitepaper [here](https://github.com/Chess-Fish/ChessFish-Whitepaper/blob/main/src/ChessFish%20Whitepaper%20DRAFT.pdf).
 
