--- a/pages/purpose.mdx
+++ b/pages/purpose.mdx
@@ -10,9 +10,9 @@ ChessFish stands apart. It's a platform where users can compete in chess for mon
 
 It's only at the highest levels that chess players get the opportunity to play for money in tournaments.
 
-Top chess organizations, such as FIDE, face issues tied to centralization, including the controversial banning of players based on their nationality. [Citation 1](https://www.rferl.org/a/russia-belarus-chess-ban/31756039.html).
+Top chess organizations, such as FIDE, face issues tied to centralization, including the controversial [banning of players based on their nationality](https://www.rferl.org/a/russia-belarus-chess-ban/31756039.html).
 
-In the 1990s, Bobby Fischer was indicted by the US Government for violating sanctions merely because he participated in a chess tournament in Montenegro and Belgrade. [Citation 2](https://www.washingtonpost.com/archive/politics/1992/12/16/chess-star-indicted-for-ignoring-sanctions/ac8a6d33-98db-4851-8395-5eb440f13f5b/)
+In the 1990s, Bobby Fischer was [indicted by the US Government for violating sanctions for participating in a chess tournament](https://www.washingtonpost.com/archive/politics/1992/12/16/chess-star-indicted-for-ignoring-sanctions/ac8a6d33-98db-4851-8395-5eb440f13f5b/) in Montenegro and Belgrade. 
 
 Since when did chess transform into a political game? 
 
