--- a/pages/guides/withdraw.mdx
+++ b/pages/guides/withdraw.mdx
@@ -1,3 +1,3 @@
 ## Withdraw Wager
 
-If you are the winner of the wager, (this is determined by who has the most overall wins out of the games initially set), you can withdraw your earnings by heading to the "matches" page and clicking the "payout wager" button.
+If you are the winner of the chess match, (this is determined by who has the most overall wins out of the games initially set), you can withdraw your earnings by heading to the "matches" page and clicking the "payout wager" button.
