--- a/pages/concepts/verifier.mdx
+++ b/pages/concepts/verifier.mdx
@@ -2,6 +2,15 @@ import ChessBoard from './board';
 
 ## Verifier Contract
 
+
+<p align="center">
+  <span style={{ display: "block", height: "20px" }}></span>
+  <img src="../verifier.webp" alt="ChessFish Verifier" width="400" height="400"/>
+</p>
+
+_______
+
+
 The verifier contract is the main contract behind verifing and validating all possible legal chess moves. The verifier contract also determines the outcome of the game, whether it is a stalemate, or checkmate.
 
 The verifier contract has been tested on hundreds of thousands of games from lichess.org. For each game, the verifier contract has returned the same outcome as have other off-chain chess move verifiers. 
