--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -8,7 +8,7 @@ ______
 </p>
 ## ChessFish
 
-ChessFish is a secure chess platform on the Ethereum network, designed for players to engage in one-on-one games or tournaments with up to 25 participants. 
+ChessFish is a web3 chess platform built on top of the Ethereum Virtual Machine, and is designed for players to engage in one-on-one games or tournaments with up to 25 participants. 
 
 ChessFish allows players to wager cryptocurrency on the outcomes of their games.
 
